# context-module

./: .gitignore  README.md  devenv.nix  pyproject.toml  requirements.txt
src/conceptualizer/: arch.py  conceptualizer.py  loader.py  metric_eval_fix.py  repro.py  utils.py
src/expt/results/: 3dident__disent.csv  3dident__disent.tex  mnist__ablation.csv  mnist__ablation.tex  mnist__beta.csv  mnist__beta.tex  mnist__expressivity_2.csv  mnist__expressivity_2.tex  mnist__expressivity_4.csv  mnist__expressivity_4.tex  mnist__groupnorm.csv  mnist__groupnorm.tex  mnist__l2norm.csv  mnist__l2norm.tex  quad__ablation.csv  quad__ablation.tex  quad__beta.csv  quad__beta.tex  quad__expressivity_2.csv  quad__expressivity_2.tex  quad__expressivity_4.csv  quad__expressivity_4.tex  quad__groupnorm.csv  quad__groupnorm.tex  quad__l2norm.csv  quad__l2norm.tex  quad_causal__ablation.csv  quad_causal__ablation.tex  summary__nvae_manual.csv  summary_table.tex
src/expt/workflow/: Snakefile
src/expt/workflow/scripts/: collect.py  disent_patch.py  eval_disent.py  format_result.py  format_summary_table.py  format_table.py  prepare_data.py  quad_helper.py  train_disent.py
